- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    5.14.1, 5.15.7, 6.2.1
 
- 
        406ff6b53d (qt/qtdeclarative/dev) 406ff6b53d (qt/tqtc-qtdeclarative/dev) 9fc6fd42d4 (qt/qtdeclarative/6.3) 9fc6fd42d4 (qt/tqtc-qtdeclarative/6.3) ea898f614d (qt/tqtc-qtdeclarative/5.15) 9fc6fd42d4 (qt/tqtc-qtdeclarative/6.3.1)
 
Text is painted when it's not expected if:
- A loader fills a parent item with dimensions 30x30.
 - The loader sourceComponent is a Text with a right padding of 30. In this case Text content width should be reduced to 0.
 
In contrast this doesn't happen if the text is not used with a Loader. This is demonstrated in the attached example. If the parent item is clicked and it's width changed which forces a
 repaint of all its children, the Text is now corrected and effectively disappears.
A similar issue can be seen when margins are used which is demonstrated in the attached example as well.
Steps to reproduce the issue:
- Run the attached project
 - Click on the parent item (rectangle with borders) to see the text disappear when parent is resized
 
- resulted from
 - 
                    
QTBUG-41559 Support for Qt Quick Box model
-         
 - Open
 
 -