Text: don't fall back to full-width layout if availableWidth == 0

If Text.width == Text.rightPadding, there is no space to render any
text; but in that case, QQuickTextPrivate::availableWidth() returns 0:
it's incorrect to fall back to layout.maximumWidth() and allow rendering
the whole line. Prior to 6ec2693d4a3c95ca9ff0c349d3c587a7f1402c05
we were checking width() here, so let's do that again.

Fixes: QTBUG-83413
Change-Id: I3ee3b49406577c3aa005a3ca3606308ff0a21d8d
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit 406ff6b53d02b8db4231e473982fe593fb1e48c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>